[package]
name = "apyr"
description = "A simple, fast, and easy to use TUI log browser."
homepage = "https://github.com/demo-exe/apyr"
repository = "https://github.com/demo-exe/apyr"
version = "0.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["log", "browser", "tui", "terminal", "console"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["docs/*"]

[profile.release]
strip = true
lto = true

[dependencies]
anyhow = "1.0.75"
better-panic = "0.3.0"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossterm = "0.27.0"
ratatui = "0.24.0"
regex = "1.10.2"
signal-hook = "0.3.17"
